--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,18 @@
 Package: clementclaustre
-Version: 0.0.0.9000
 Title: Evaluation Shiny
+Version: 0.0.0.9000
+Authors@R: 
+    person("Clement", "Claustre", , "Clement.claustre@urgences-ara.fr", role = c("aut", "cre"))
 Description: Evaluation de niveau - Formation Shiny.
-Authors@R: person(given = "Clement",
-       family = "Claustre",
-       role = c("aut", "cre"),
-       email = "Clement.claustre@urgences-ara.fr")
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
 URL: https://github.com/CC-URGARA/clementclaustre
 BugReports: https://github.com/CC-URGARA/clementclaustre/issues
+Depends: 
+    R (>= 2.10)
+Imports: 
+    glue
+Config/fusen/version: 0.5.2
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.1
